WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158512
EFL build break since
r201761
https://bugs.webkit.org/show_bug.cgi?id=158512
Summary
EFL build break since r201761
Gyuyoung Kim
Reported
2016-06-07 20:01:37 PDT
There has been build error since
r201761
on EFL port. To resotre EFL bot, I land a fix without review. Source/WebCore/CMakeFiles/WebCore.dir/platform/posix/SharedBufferPOSIX.cpp.o.d -o Source/WebCore/CMakeFiles/WebCore.dir/platform/posix/SharedBufferPOSIX.cpp.o -c ../../Source/WebCore/platform/posix/SharedBufferPOSIX.cpp ../../Source/WebCore/platform/posix/SharedBufferPOSIX.cpp: In static member function ‘static WTF::RefPtr<WebCore::SharedBuffer> WebCore::SharedBuffer::createFromReadingFile(const WTF::String&)’: ../../Source/WebCore/platform/posix/SharedBufferPOSIX.cpp:69:42: error: operands to ?: have different types ‘WTF::Ref<WebCore::SharedBuffer>’ and ‘int’ return totalBytesRead == bytesToRead ? SharedBuffer::adoptVector(buffer) : 0;
Attachments
Patch
(2.09 KB, patch)
2016-06-07 20:06 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(2.17 KB, patch)
2016-06-07 22:10 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2016-06-07 20:06:31 PDT
Created
attachment 280763
[details]
Patch
Gyuyoung Kim
Comment 2
2016-06-07 22:10:03 PDT
Created
attachment 280768
[details]
Patch
WebKit Commit Bot
Comment 3
2016-06-07 22:41:19 PDT
Comment on
attachment 280768
[details]
Patch Clearing flags on attachment: 280768 Committed
r201792
: <
http://trac.webkit.org/changeset/201792
>
WebKit Commit Bot
Comment 4
2016-06-07 22:41:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug