EFL build has been broken since r201761 https://bugs.webkit.org/show_bug.cgi?id=158512

Unreviewed build fix.


* platform/posix/SharedBufferPOSIX.cpp:
(WebCore::SharedBuffer::createFromReadingFile):
Do not use ? operand in return line. Additionally return nullptr instead of 0.


Canonical link: https://commits.webkit.org/176575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201792 268f45cc-cd09-0410-ab3c-d52691b4dbfc